[package]
name = "screen_size"
version = "0.1.0"
authors = ["Emma Britton <emmabritton@pm.me>"]
readme = "README.md"
license-file = "LICENSE"
edition = "2021"
repository = "https://github.com/emmabritton/screen_size"
description = "Gets the monitor/screen size for desktop"
publish = true

[features]
serde = ["dep:serde"]

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24.0"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = { version = "2.21", features = ["xlib"] }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }
